--- a/src/main/resources/templates/user-registration.html
+++ b/src/main/resources/templates/user-registration.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <p>Registration</p>
+
 <form th:action="@{/register}" th:method="post" th:object="${userRegistrationForm}">
     <div>
         <label for="firstName">First Name:</label>
@@ -16,6 +17,14 @@
         <label for="lastName">Last Name:</label>
         <input type="text" th:field="*{lastName}">
         <span th:errors="*{lastName}" th:if="${#fields.hasErrors('lastName')}">Last Name Error</span>
+    </div>
+    <div>
+        <label for="organisationId">Organisation:</label>
+        <select th:field="*{organisationId}">
+            <option value="" selected>Choose Organisation</option>
+            <option th:each="organisationEntity: ${organisationEntities}" th:value="${organisationEntity.getOrganisationId()}" th:text="${organisationEntity.getOrganisationName()}"></option>
+        </select>
+        <span th:errors="*{organisationId}" th:if="${#fields.hasErrors('organisationId')}">Organisation Error</span>
     </div>
     <div>
         <label for="email">Username:</label>
