--- a/src/main/resources/templates/file-upload.html
+++ b/src/main/resources/templates/file-upload.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>File Upload</title>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -13,57 +15,80 @@
 
             <input th:field="*{fileId}" type="hidden"/>
             <div class="row">
+                <div class = "col-md">
                     <div class="mb-3">
-                        <label for="logoFile">File: </label>
+                        <label class="text-secondary" for="logoFile">File: </label><br>
                         <input th:field="*{logoFile}" type="file" required/>
                         <div class="alert alert-warning" th:if="${errorMessage != null}" th:text="${errorMessage}">File Error
                         </div>
                     </div>
+                </div>
+                <div class = "col-md">
                     <div class="mb-3">
-                        <label for="logoFileName">Upload Name: </label>
+                        <label class="text-secondary" for="logoFileName">Upload Name: </label><br>
                         <input th:field="*{logoFileName}" type="text" required/>
                     </div>
+                </div>
             </div>
             <div class="row">
-                <div class = "col-md-8">
-                    <div class="mb-3">
-                        <label for="tag">Tag: </label><br>
-                        <input type="radio" id="urgent" name="tag" value="urgent" required>
-                        <label for="urgent">Urgent</label>
-                        <input type="radio" id="draft" name="tag" value="draft">
-                        <label for="draft">Draft</label>
-                        <input type="radio" id="final" name="tag" value="final">
-                        <label for="final">Final</label>
+                <div class = "col-lg-6">
+                    <div class = "form-check form-check-inline">
+                        <div class="mb-3">
+                            <label class="form-label text-secondary" for="tag">Tag: </label><br>
+
+                            <input class="form-check-input" type="radio" id="urgent" name="tag" value="urgent">
+                            <label class="form-check-label" for="urgent">Urgent</label>
+                            <input class="form-check-input" type="radio" id="draft" name="tag" value="draft">
+                            <label class="form-check-label" for="draft">Draft</label>
+                            <input class="form-check-input" type="radio" id="final" name="tag" value="final">
+                            <label class="form-check-label" for="final">Final</label>
+                        </div>
                     </div>
                 </div>
-                <div class = "col-md-4">
-<!--                    <div class="mb-3">-->
-<!--                        <label for="partner">Share with someone:</label><br>-->
-<!--                        <input type="text" required/>-->
-<!--                    </div>-->
+                <div class = "col-lg-6">
+                    <div class = "form-check form-check-inline">
+                        <div class="mb-3">
+                        <label class="form-label text-secondary" for="accessLevel">Access Level: </label><br>
+                            <input class="form-check-input" type="radio" id="myOrganisation" name="accessLevel" value="myOrganisation">
+                            <label class="form-check-label" for="myOrganisation">My Organisation</label>
+                            <input class="form-check-input" type="radio" id="myPartners" name="accessLevel" value="private">
+                            <label class="form-check-label" for="myPartners">My Partners</label>
+
+
+                            <input class="form-check-input" type="radio" id="public" name="accessLevel" value="private">
+                            <label class="form-check-label" for="public">Public</label>
+                            <input class="form-check-input" type="radio" id="private" name="accessLevel" value="private">
+                            <label class="form-check-label" for="private">Private</label>
+                            </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class = "col-md-12">
-                    <label for="accessLevel">Access Level: </label><br>
-                    <input type="radio" id="myOrganisation" name="accessLevel" value="myOrganisation" required>
-                    <label for="myOrganisation">My Organisation</label>
-                    <input type="radio" id="myPartners" name="accessLevel" value="myPartners">
-                    <label for="draft">My Partners</label>
-                    <input type="radio" id="public" name="accessLevel" value="public">
-                    <label for="final">Public</label>
-                    <input type="radio" id="private" name="accessLevel" value="private">
-                    <label for="final">Private</label>
+                <div class = "col-md-6">
+                    <div class="mb-3">
+                        <label class="text-secondary">Share with someone:</label><br>
+                        <input type="text" value="Enter contact's email"/>
+                    </div>
+                </div>
+                <div class = "col-md-6">
+                    <div class="mb-3">
+                        <label class="text-secondary" for="comment">Comment: </label><br>
+                        <input th:field="*{comment}" type="text"/>
+                    </div>
                 </div>
             </div>
-            <div class="form-group row">
-                <div class="mb-3 col-xs-12">
-                    <label for="comment">Comment: </label><br>
-                    <input th:field="*{comment}" type="text" width="100%"/>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm">
+                        <div class = "d-flex justify-content-end">
+                            <button class="btn btn-danger btn-lg">Cancel</button>
+                        </div>
+
+                    </div>
+                    <div class="col-sm">
+                            <button class="btn btn-dark btn-lg">Submit</button>
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <button class="btn btn-primary">Submit</button>
             </div>
         </form>
     </div>
