--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container" th:if="${!files.isEmpty}">
-    <h1 th:text="title">Title</h1>
+    <h1 th:text="${title}">Title</h1>
     <hr>
     <table class="table">
         <thead>
