Now shows the public files as well

--- a/src/main/resources/templates/file-upload.html
+++ b/src/main/resources/templates/file-upload.html
@@ -57,7 +57,7 @@
                             <label class="form-check-label" for="myPartners">My Partners</label>
 
 
-                            <input class="form-check-input" type="radio" id="public" name="accessLevel" value="private">
+                            <input class="form-check-input" type="radio" id="public" name="accessLevel" value="public">
                             <label class="form-check-label" for="public">Public</label>
                             <input class="form-check-input" type="radio" id="private" name="accessLevel" value="private">
                             <label class="form-check-label" for="private">Private</label>
