--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -36,7 +36,7 @@
         </tr>
         </tbody>
     </table>
-</div>d
+</div>
 
 <div class="container" th:if="${files.isEmpty}">
     No matching files.
