Can share files with other organisation

--- a/src/main/resources/templates/file-upload.html
+++ b/src/main/resources/templates/file-upload.html
@@ -51,14 +51,10 @@
                     <div class = "form-check form-check-inline">
                         <div class="mb-3">
                         <label class="form-label text-secondary" for="accessLevel">Access Level: </label><br>
-                            <input class="form-check-input" type="radio" id="myOrganisation" name="accessLevel" value="myOrganisation">
-                            <label class="form-check-label" for="myOrganisation">My Organisation</label>
-                            <input class="form-check-input" type="radio" id="myPartners" name="accessLevel" value="private">
-                            <label class="form-check-label" for="myPartners">My Partners</label>
-
-
                             <input class="form-check-input" type="radio" id="public" name="accessLevel" value="public">
                             <label class="form-check-label" for="public">Public</label>
+                            <input class="form-check-input" type="radio" id="standard" name="accessLevel" value="standard">
+                            <label class="form-check-label" for="standard">Standard</label>
                             <input class="form-check-input" type="radio" id="private" name="accessLevel" value="private">
                             <label class="form-check-label" for="private">Private</label>
                             </div>
