--- a/src/main/resources/templates/user-registration.html
+++ b/src/main/resources/templates/user-registration.html
@@ -90,6 +90,7 @@
                 </div>
                 <span class="error-msg" th:errors="*{passwordConf}" th:if="${#fields.hasErrors('passwordConf')}">First Name Error</span>
 
+                <span class="seperator"></span>
 
                 <div>
                     <select th:field="*{organisationId}" class="form-select">
