--- a/src/main/resources/templates/user-registration.html
+++ b/src/main/resources/templates/user-registration.html
@@ -40,7 +40,7 @@
 
     <div class="container register">
         <h1>Register an account</h1>
-        <div class="container register-form">
+        <div class="container register-form" style="margin-bottom: 30px">
             <form th:action="@{/register}" th:method="post" th:object="${userRegistrationForm}">
 
                 <div class="container">
