--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
       layout:decorate="~{/layout/main-layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Register</title>
+    <title>Login</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/user-registration.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,26 +41,28 @@
     <div class="container register">
         <h1>Login To Your Account</h1>
         <div class="container register-form" style="margin-bottom: 30px">
-            <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
-
-                <div class="form-input" style="margin-top: 0;">
-                    <label for="username" >Username</label>
-                    <input type="text" >
+            <form name="f" th:action="@{/login}" method="post">
+                <div>
+                    <div class="form-input" style="margin-top: 0;">
+                        <label for="username">Username</label>
+                        <input type="text" id="username" name="username"/>
+                    </div>
                 </div>
-
-                <div class="form-input" style="margin-top: 20px">
-                    <label for="password" >Password</label>
-                    <input type="password">
+                <div>
+                    <div class="form-input" >
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password"/>
+                    </div>
                 </div>
-
-                <div th:if="${param.error}">
-                    <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+                <div class="error-msg" th:if="${param.error}">Invalid username and password</div>
+                <div class="error-msg" th:if="${param.logout}">You have been logged out.</div>
+                <div class="form-actions">
+                    <button class="form-submit" type="submit" >Log in</button>
                 </div>
-
-                <input type="submit" class="form-submit">
             </form>
         </div>
     </div>
+    <a  style="color: #ffffff; text-decoration: none" href="/register">Don't have an account?</a>
 </div>
 </body>
 </html>
