--- a/src/main/resources/templates/layout/main-layout.html
+++ b/src/main/resources/templates/layout/main-layout.html
@@ -49,7 +49,7 @@
 <body>
 
 <div class="--graphium-header">
-    <span class="--graphium-brand"></span>
+    <a href="/"><span class="--graphium-brand"></span></a>
 </div>
 
 <div layout:fragment="content" class="--graphium-content">
