--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,8 @@
 <body>
 <div layout:fragment="content">
     <p>Home Page</p>
+    <a href="/myFiles">VIEW MY FILES</a>
+    <a href="/file">UPLOAD A FILE</a>
 </div>
 </body>
 </html>
