--- a/src/main/resources/templates/layout/main-layout.html
+++ b/src/main/resources/templates/layout/main-layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">Graphium</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <style>
         html, body {
